--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Viking Trainer</title>
   </head>
-  <body>
+  <header>
     <nav>
       <a href="index.html"
         ><img class="img" src="./img/Logo nuevo2.jpg" alt="logoviking"
@@ -26,5 +26,6 @@
       <a href="index.html" class="navlink">Planes de Alimentacion</a>
       <a href="index.html" class="navlink">Contacto</a>
     </nav>
-  </body>
+  </header>
+  <body></body>
 </html>
