--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Viking Trainer</title>
   </head>
-  <header>
-    <nav>
-      <a href="index.html"
-        ><img class="img" src="./img/Logo nuevo2.jpg" alt="logoviking"
-      /></a>
-      <a href="index.html" class="marca">VIKING TRAINER</a>
-      <a href="index.html" class="navlink">Planes Personalizados</a>
-      <a href="index.html" class="navlink">Planes de Alimentacion</a>
-      <a href="index.html" class="navlink">Contacto</a>
-    </nav>
-  </header>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <a href="index.html"
+          ><img class="img" src="./img/Logo nuevo2.jpg" alt="logoviking"
+        /></a>
+        <a href="index.html" class="marca">VIKING TRAINER</a>
+        <a href="index.html" class="navlink">Planes Personalizados</a>
+        <a href="index.html" class="navlink">Planes de Alimentacion</a>
+        <a href="index.html" class="navlink">Contacto</a>
+      </nav>
+    </header>
+  </body>
 </html>
